# happibot

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  AGENT_ARCHITECTURE.md  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  002_chat_history.sql  003_reminder_last_sent.sql  004_memory.sql
backend/src/: auth.rs  config.rs  db.rs  dotenv.rs  http_error.rs  main.rs  memory.rs  openai.rs  scheduler.rs  state.rs  telegram.rs  user_id.rs
backend/src/api/: v1.rs
deploy/nginx/: README.md  happiiiiibot.ammarfaisal.me.conf
deploy/telegram/: set-webhook.sh
docs/: api.md
docs/ui/: telegram-miniapp-design.md  thumb-reach.md
webapp/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
webapp/src/app/: globals.css  layout.tsx  page.tsx  today-client.tsx
webapp/src/app/checkin/: checkin-client.tsx  page.tsx
webapp/src/app/goals/: goals-client.tsx  page.tsx
webapp/src/app/ikigai/: ikigai-client.tsx  page.tsx
webapp/src/app/settings/: page.tsx  settings-client.tsx
webapp/src/components/: AppShell.tsx  IkigaiDiagram.tsx  ProgressSparkline.tsx  RootProviders.tsx  TgInit.tsx
webapp/src/lib/: api.ts
